feat: add route to get especific volunteer
